tests/machine/x/python/map_literal_dynamic.py
# Generated by Mochi compiler v0.10.25 on 2025-07-14T02:59:01Z
x = 3
y = 4
m = {"a": x, "b": y}
print(f"{m["a"]} {m["b"]}")
